# Arkanoid

./: .gitignore  CMakeLists.txt  README.md  arkanoid.c  level1.txt  main.c
include/: audio.h  ball.h  bonus.h  brick.h  doh.h  game.h  harmful.h  input.h  render.h  score.h  vault.h
levels/: level2.txt
resources/levels/: level1.txt  level10.txt  level12.txt  level13.txt  level14.txt  level17.txt  level19.txt  level2.txt  level20.txt  level21.txt  level23.txt  level24.txt  level27.txt  level28.txt  level3.txt  level31.txt  level32.txt  level33.txt  level7.txt  level8.txt
src/: audio.c  ball.c  bonus.c  brick.c  doh.c  game.c  harmful.c  input.c  render.c  score.c  vault.c
tools/ascii-converter/: ascii-converter.py
tools/level-builder/: README.md  arkanoid-level-builder.py
tools/level-builder/levels/: 9.txt  level1.txt  level11.txt  level12.txt  level13.txt  level15.txt  level16.txt  level18.txt  level2.txt  level22.txt  level24.txt  level25.txt  level26.txt  level28.txt  level30.txt  level33.txt  level4.txt  level5.txt  level6.txt  level9.txt  test.txt
